recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:2: error: ';' expected but ',' found.
var tableau:List[Int],(l.length-1)
                     ^